--- a/CARACTERISTICAS.html
+++ b/CARACTERISTICAS.html
@@ -8,7 +8,7 @@
     <title>CARACTERISTICAS</title>
 </head>
 <body>
-    <a href="REPORTE.html">
+    <a href="index.html">
         <button class="btn volver">Volver</button>
     </a>
     <header>Cómo Funciona la Conexión WLAN: Uso de `ping` e `ipconfig`</header>
