--- a/CARACTERISTICAS.html
+++ b/CARACTERISTICAS.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <link rel = "stylesheet" href="css/cssreporte.css">
+    <link rel = "stylesheet" href="cssreporte.css">
     <link rel="shortcut icon" href="favicon.jpg" type="image/x-icon">
     <meta charset="UTF-8" />
     <title>CARACTERISTICAS</title>
