--- a/IntegrantesZPD.html
+++ b/IntegrantesZPD.html
@@ -9,7 +9,7 @@
        
 </head>
 <body>
-    <a href="REPORTE.html">
+    <a href="index.html">
         <button class="btn volver">Volver</button>
     </a>
     <header>Integrantes del equipo</header>
