--- a/PASOS.html
+++ b/PASOS.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="css/cssreporte.css">
+    <link rel="stylesheet" type="text/css" href="cssreporte.css">
     <link rel="shortcut icon" href="favicon.jpg" type="image/x-icon">
     <title>Pasos para hacer una conexión WLAN</title>
 </head>
 <body>
-    <a href="REPORTE.html">
+    <a href="index.html">
         <button class="btn volver">Volver</button>
     </a>
     <header>Pasos para hacer una conexión WLAN</header>
