--- a/FOTOS DE EVIDENCIA.html
+++ b/FOTOS DE EVIDENCIA.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <a href="REPORTE.html">
+    <a href="index.html">
         <button class="btn volver">Volver</button>
     </a>
      <header>
