--- a/PASOS.html
+++ b/PASOS.html
@@ -43,42 +43,42 @@
         <div class="Banners">
             <section class="productos">
                 <div class="producto">
-                    <img src="IMAGENES/0243e97d-0b6c-426c-8a92-94f9e8d6f467.jpg" alt="PASO 1">
+                    <img src="0243e97d-0b6c-426c-8a92-94f9e8d6f467.jpg" alt="PASO 1">
                     <p>PASO 1</p>
                 </div>
 
                 <div class="producto">
-                    <img src="IMAGENES/DOMINIO.jpg" alt="PASO 2">
+                    <img src="DOMINIO.jpg" alt="PASO 2">
                     <p>PASO 2</p>
                 </div>
 
                 <div class="producto">
-                    <img src="IMAGENES/REDPRIVADA.jpg" alt="PASO 3">
+                    <img src="REDPRIVADA.jpg" alt="PASO 3">
                     <p>PASO 3</p>
                 </div>
 
                 <div class="producto">
-                    <img src="IMAGENES/USOCOMPARTIDO.jpg" alt="PASO 4">
+                    <img src="USOCOMPARTIDO.jpg" alt="PASO 4">
                     <p>PASO 4</p>
                 </div>
 
                 <div class="producto producto-fan-deportes">
-                    <img src="IMAGENES/Captura de pantalla 2024-09-05 100915.jpg " alt="PASO 5">
+                    <img src="Captura de pantalla 2024-09-05 100915.jpg " alt="PASO 5">
                     <p>PASO 5</p>
                 </div>
 
                 <div class="producto producto-arabe">
-                    <img src= "IMAGENES/e6503459-823a-43c3-a9bb-53b1367e390d.jpg" alt="PASO 6">
+                    <img src= "e6503459-823a-43c3-a9bb-53b1367e390d.jpg" alt="PASO 6">
                     <p>PASO 6</p>
                 </div>
 
                 <div class="producto producto-farolitos">
-                    <img src= "IMAGENES/Captura de pantalla 2024-09-07 074358.png" alt="PASO 7">
+                    <img src= "Captura de pantalla 2024-09-07 074358.png" alt="PASO 7">
                     <p>PASO 7</p>
                 </div>
 
                 <div class="producto producto-independencia">
-                    <img src="IMAGENES/e6503459-823a-43c3-a9bb-53b1367e390d (2).jpg" alt="PASO 8">
+                    <img src="e6503459-823a-43c3-a9bb-53b1367e390d (2).jpg" alt="PASO 8">
                     <p>PASO 8</p>
                 </div>
             </section>
